Corrected width of About Me sign so image was not cut off

--- a/css/site.css
+++ b/css/site.css
@@ -104,7 +104,7 @@ body {
         }
 
     #skills {
-        
+
     }
 
 /* Mobile */
@@ -212,7 +212,7 @@ body {
 
         .small-wood-sign {
             height: 300px;
-            width: 300px;
+            width: 314px;
             margin-left: 190px;
             margin-top: -11px;
         }
